jellyfish icon 위치

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <header id="header" role="banner">
     <div class="header_inner">
       <div class="header_logo">
-        <h1 class="home_logo"><a href="#">PORTFOLIO <em> ux·ui webpublisher</em></a></h1>
+        <h1 class="home_logo"><a href="#">PORTFOLIO</a></h1>
       </div>
       <nav class="header_nav" role="navigation" aria-label="메인메뉴">
         <ul>
@@ -250,10 +250,16 @@
 
         <div class="work_left">
           <div class="title work_title" data-title="CODINGWORKS" data-date=""
-            data-details="코딩 작업을 통해 기술적 구현을 포함한 다양한 작업물입니다.">
+            data-details="코딩 작업을 통해 기술적 구현을 포함한 다양한 작업물입니다. <br> 흘러가는 이미지에 마우스를 올려보세요!">
             <span>CODINGWORKS</span>
             <em></em>
-            <em>코딩 작업을 통해 기술적 구현을 포함한 다양한 작업물입니다.</em>
+            <em>코딩 작업을 통해 기술적 구현을 포함한 다양한 작업물입니다. <br>
+              흘러가는 이미지에 마우스를 올려보세요!
+
+            </em>
+          </div>
+          <div class='togglebtnO'>
+            <button class='togglebtnI'></button>
           </div>
         </div>
 
@@ -430,6 +436,8 @@
           </div>
         </div>
 
+       
+
         <div class="bubble_cont">
           <div class="bubble x1"></div>
           <div class="bubble x2"></div>
@@ -590,9 +598,8 @@
             </defs>
             <g class="parallax">
               <use xlink:href="#gentle-wave" x="48" y="0" fill="rgba(70, 130, 180,0.2)" />
-              <use xlink:href="#gentle-wave" x="48" y="3" fill="rgba(70, 130, 180,0.5)" />
-              <use xlink:href="#gentle-wave" x="48" y="5" fill="rgba(70, 130, 180,0.8)" />
-              <use xlink:href="#gentle-wave" x="48" y="7" fill="#4682B4" />
+              <use xlink:href="#gentle-wave" x="48" y="4" fill="rgba(70, 130, 180,0.6)" />
+              <use xlink:href="#gentle-wave" x="48" y="8" fill="#4682B4" />
             </g>
           </svg>
         </div>
