--- a/index copy.html
+++ b/index copy.html
@@ -13,17 +13,22 @@
 <body>
 
   <header id="header" role="banner">
-    <nav class="header_nav" role="navigation" aria-label="메인메뉴">
-      <ul>
-        <li><a class="on" href="#home">home</a></li>
-        <li><a href="#project">project</a></li>
-        <li><a href="#work">work</a></li>
-        <li><a href="#graphic">graphic</a></li>
-        <li><a href="#about">about</a></li>
-      </ul>
-    </nav>
-    <div class="header_nav_mobile" id="headerToggle" aria-controls="primary-menu" aria-expanded="false" role="button">
-      <span></span>
+    <div class="header_inner">
+      <div class="header_logo">
+        <h1 class="home_logo"><a href="#">PORTFOLIO</a></h1>
+      </div>
+      <nav class="header_nav" role="navigation" aria-label="메인메뉴">
+        <ul>
+          <li><a class="on" href="#home">home</a></li>
+          <li><a href="#project">project</a></li>
+          <li><a href="#work">work</a></li>
+          <li><a href="#graphic">graphic</a></li>
+          <li><a href="#about">about</a></li>
+        </ul>
+      </nav>
+      <div class="header_nav_mobile" id="headerToggle" aria-controls="primary-menu" aria-expanded="false" role="button">
+        <span></span>
+      </div>
     </div>
   </header>
 
@@ -537,7 +542,8 @@
                     </ul>
                   </li><!-- work20 -->
                   <li class="splide__slide">
-                    <img src="./src/assets/work/work-sanlio.png" alt="work21" data-title="sanlio" data-date="2024.07.08"
+                    <img src="./src/assets/work/work-sanlio.png" alt="work21" data-title="sanlio" 
+                    data-date="2024.07.08"
                       data-details="산리오 홈페이지 특정부분을 클론 코딩하였습니다.">
                     <ul class="web-icon">
                       <li><img src="./src/assets/images/multiple-icon.png" alt=""></li>
