--- a/src/project/APP/app.html
+++ b/src/project/APP/app.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ARTEPICK</title>
-    <link rel="stylesheet" href="./app.css">
+    <link rel="stylesheet" href="/src/project/app.css">
+
 </head>
 
 <body>
@@ -15,18 +16,18 @@
             <img src="/src/assets/images/pf_bg.png" alt="pf_bg">
         </div>
         <ul class="top sub-title2">
-            <li>TYPE <span>APP TEAM PROJECT</span> </li>
+            <li>APP TEAM PROJECT</li>
         </ul>
         <div class="main">
             <div class="desc sub-title1">
-                <img src="/src/assets/project/logo.png" alt="logo">
+                <h2>ARTEPIC</h2>
                 <p>문화생활을 한곳에 모은 문화 콘텐츠 플랫폼</p>
             </div>
             <img class="app-main" src="/src/assets/project/app_thumbnail.png" alt="app-main">
         </div>
         <ul class="bottom sub-title2">
-            <li>DATE <span>2024년 9월</span></li>
-            <li>TOOLS <span>Pigma, Illustrator, Photoshop</span></li>
+            <li>2024.09.11</li>
+            <li>Pigma, Illustrator, Photoshop</li>
         </ul>
     </section>
     <!-- overview -->
@@ -243,7 +244,7 @@
             <h2 class="title1">target</h2>
             <p class="sub-title1">문화생활을 즐기고자 하는 <br>
                 다양한 계층</p>
-            <p class="sub-title2">다양한 취향과 문화적 배경을 가진 사용자들이 <br>
+            <p class="body1">다양한 취향과 문화적 배경을 가진 사용자들이 <br>
                 자신의 관심사에 맞는 콘텐츠를 쉽게 찾고 경험할 수 있도록 설계되어, <br>
                 문화생활을 더 풍부하게 즐기고 싶은 사람들을 주요 타겟으로 합니다.</p>
         </div>
@@ -284,7 +285,7 @@
             <p class="sub-title1">사용자를 대표할 페르소나 타켓층을 <br>
                 <span>젊은 세대 (20대, 30대)와 직장인</span>으로 설정했어요
             </p>
-            <p class="sub-title2">이들은 문화 콘텐츠에 대한 높은 관심을 가지고 있으며, 트렌드에 민감하고 여가 시간을 효율적으로 활용하려는 성향을 보이고, <br>
+            <p class="body1">이들은 문화 콘텐츠에 대한 높은 관심을 가지고 있으며, 트렌드에 민감하고 여가 시간을 효율적으로 활용하려는 성향을 보이고, <br>
                 바쁜 일상 속에서도 자신만의 취향에 맞는 문화 경험을 원하고, 앱의 개인화 추천 기능과 트렌디한 콘텐츠에 큰 매력을 느낄 가능성이 큽니다. <br>
                 따라서, <span>젊은 세대(20-30대)와 직장인</span>을 주요 타겟으로 설정하였습니다.</p>
         </div>
@@ -308,7 +309,7 @@
                     <div class="spec-box">
                         <p class="body1 spec">Specification</p>
                         <p class="body2 detail">
-                            대학원에서 어려운 연구와 논문 작업에 몰두하며, 하루 대부분을 도서관에서 보내고 있는 학생이다.
+                            대학원에서 논문 작업에 몰두하며, 하루 대부분을 도서관에서 보내고 있는 학생이다.
                             공부에 너무 찌들어 있으며, 인내와 끈기의 상징처럼 느껴지기도 한다.
                             하지만 틈틈이 최신 문화 트렌드를 놓치지 않고, 새로운 문화 콘텐츠를 즐기는 걸 좋아한다.
                             바쁜 일상 속에서 감정 기반 맞춤형 콘텐츠 추천을 통해 조금이나마 여유를 찾고 싶어 한다.</p>
@@ -335,7 +336,7 @@
                 </div>
             </div>
             <div class="persona">
-                <h2 class="sub-title2">한곳에서 간편하게 찾고 즐길 수 있는 앱이 필요해요.</h2>
+                <h2 class="sub-title2">한곳에서 간편하게 찾을 수 있는 앱이 필요해요.</h2>
                 <div class="persona-desc">
                     <div class="persona-target">
                         <img src="/src/assets/project/persona2.png" alt="persona2">
@@ -542,8 +543,8 @@
         <div class="logo-box">
             <div class="logo"><img src="/src/assets/project/logo.png" alt="logo"></div>
             <div class="desc">
-                <h3 class="title2">예술의 서사를 보여준다 = ARTEPIC</h2>
-                    <p class="body1">art(예술)와 epic(서사)를 결합하여 예술의 서사적 감동과 각 개인이 예술 작품을 선택하는 <br> 즐거움을 표현한 브랜드입니다.
+                <h3 class="title2">예술의 서사를 보여준다</h2>
+                    <p class="body1">art(예술)와 epic(서사)를 결합하여 예술의 서사적 감동과 각 개인이 예술 작품을 선택하는 즐거움을 표현한 브랜드입니다.
                         '아트에픽'으로 발음되어, '아트에 픽' <br>
                         즉, 사용자가 다양한 예술 작품을 선택하는 행위를 직관적으로 떠올리게 합니다.</p>
             </div>
