--- a/src/work/acebed/index.html
+++ b/src/work/acebed/index.html
@@ -181,7 +181,6 @@
 
     <section class="sect2">
         <h2 class="tit">ACE SCIENCE</h2>
-        <a href="#" class="more-btn">more</a>
         <div class="science-wrap">
             <div class="tabs">
                 <ul class="tab-menu">
@@ -197,24 +196,46 @@
                         <div class="video">
                             <video src="./images/science1.mp4" autoplay muted loop></video>
                         </div>
+                        <div class="txt">
+                            <p class="addtxt1">HYBRID Z SPRING</p>
+                            <p class="txt1">오늘밤 어떤 스프링으로 <br>만든 침대에서 <br>주무시겠습니까?</p>
+                            <p class="txt2">에이스만의 첨단 공학이 적용된 스프링은 <br>인체 곡선과 하중 분포에 따라 위에서 한 번 <br>부드럽게 맞춰주고 밑에서 또 한
+                                번 <br>단단하게 받쳐줍니다. </p>
+                        </div>
                     </div>
                     <div class="swiper-slide hslide hslide2">
                         <div class="video">
                             <video src="./images/science2.mp4" autoplay muted loop></video>
+                            <div class="txt">
+                                <p class="addtxt1">5 FREE SYSTEM</p>
+                                <p class="txt1">휴식을 방해하는 <br>모든 것이 사라지는 순간, <br>완벽한 편안함이 <br>시작됩니다</p>
+                                <p class="txt2">꺼짐, 빈틈, 쏠림, 소음, 흔들림으로부터 자유롭게! 어떤 몸 상태에도 적용되는 5 FREE SYSTEM으로 최상의 숙면 조건을
+                                    만듭니다.</p>
+                            </div>
                         </div>
                     </div>
                     <div class="swiper-slide hslide hslide3">
                         <div class="video">
                             <video src="./images/science3.mp4" autoplay muted loop></video>
+                            <div class="txt">
+                                <p class="addtxt1">NEW MATERIAL</p>
+                                <p class="txt1">시원하게, 위생적으로 <br>최고의 잠을 위한 <br>새로운 기술</p>
+                                <p class="txt2">최고 품질을 위해 중요한 소재 하나하나까지 직접 개발, 생산한 신소재만을 사용합니다</p>
+                            </div>
                         </div>
                     </div>
                     <div class="swiper-slide hslide hslide4">
                         <div class="video">
                             <video src="./images/science4.mp4" autoplay muted loop></video>
+                            <div class="txt">
+                                <p class="addtxt1">ECO &amp; HEALTH</p>
+                                <p class="txt1">피부에 가까운 만큼 <br>더욱 안전하게 <br>당신의 하루가 건강해집니다</p>
+                                <p class="txt2">최고 품질을 위해 중요한 소재 하나하나까지 직접 개발, 생산한 신소재만을 사용합니다</p>
+                            </div>
                         </div>
                     </div>
                 </div>
-                <!-- <div class="swiper-pagination"></div> -->
+                <div class="swiper-pagination"></div>
             </div>
             <div class="swiper vSwiper v-slide-container">
                 <ul class="swiper-wrapper vslide-wrap">
@@ -235,7 +256,7 @@
                         <p class="txt2">최고 품질을 위해 중요한 소재 하나하나까지 직접 개발, 생산한 신소재만을 사용합니다</p>
                     </li>
                     <li class="swiper-slide vslide vslide4">
-                        <p class="txt1">피부에 가까운 만큼 <br>더욱 안전하게 <br>당신의 하루가 건강해집니다</p>
+                        <p class="txt1">피부에 가까운 만큼 <br>더욱 안전하게 <br>당신의 하루가 <br> 건강해집니다</p>
                         <p class="txt2">최고 품질을 위해 중요한 소재 하나하나까지 직접 개발, 생산한 신소재만을 사용합니다</p>
                     </li>
                 </ul>
@@ -258,7 +279,6 @@
     <section class="sect3">
         <article class="art1">
             <h2 class="tit">ACE COLLECTION</h2>
-            <a href="#" class="more-btn">more</a>
             <div class="collection">
                 <div class="tab-list">
                     <ul class="tab-menu">
@@ -266,7 +286,7 @@
                         <li><a href="#">추천제품</a></li>
                     </ul>
                     <div class="tabs">
-                        <div class="tab">
+                        <div class="tab" >
                             <div class="swiper col1Swiper">
                                 <div class="swiper-wrapper">
                                     <div class="swiper-slide on">
@@ -312,7 +332,7 @@
                                 <div class="swiper-scrollbar"></div>
                             </div>
                         </div>
-                        <div class="tab">
+                        <div class="tab" >
                             <div class="swiper col2Swiper">
                                 <div class="swiper-wrapper">
                                     <div class="swiper-slide on">
@@ -325,7 +345,11 @@
                                             </ul>
                                             <p class="title">ARNO-Ⅱ</p>
                                             <p class="txt">백조의 품 속에서 잠들다, ARNO II</p>
-                                            <button><a href="#">VIEW</a></button>
+                                            <button>
+                                                <a href="#">
+                                                    <span>VIEW</span>
+                                                </a>
+                                            </button>
                                         </div>
                                     </div>
                                     <div class="swiper-slide">
