--- a/src/work/shift/index.html
+++ b/src/work/shift/index.html
@@ -19,7 +19,7 @@
     <main>
         <div class="main-content">
             <div class="video">
-                <!-- <video src="./images/SHIFT(시프트) 비타민 캡슐샤워기 Teaser 🎬.mp4" loop autoplay muted></video> -->
+                <video src="./images/SHIFT(시프트) 비타민 캡슐샤워기 Teaser 🎬.mp4" loop autoplay muted></video>
             </div>
             <ul class="menu flex just-c">
                 <li class="shift"><a href="#">HOW TO USE</a></li>
